--- a/album-info.html
+++ b/album-info.html
@@ -4,15 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Album Info</title>
-    <link rel="stylesheet" href="./CSS/navigation.css"> <!-- Link to the CSS navigation -->
+    <link rel="stylesheet" href="./CSS/navigation.css"> 
 </head>
 <body>
-    <div id="nav-container"></div>
     <div id="content"></div>
 
-    
-    
-    <script src="./navigation.js" type="module"></script>
-    <script src="./album-info.js"></script>
+    <script src="./album-info.js" type="module"></script>
 </body>
 </html>
