--- a/index.html
+++ b/index.html
@@ -4,13 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Main Page</title>
-    <link rel="stylesheet" href="./CSS/navigation.css"> <!-- Link to the CSS navigation -->
-</head>
+    <link rel="stylesheet" href="./CSS/navigation.css"> </head>
 <body>
-    <div id="nav-container"></div>
     <h1>Hello</h1>
 
 
-    <script src="./navigation.js" type="module"></script>
+    <script src="./index.js" type="module"></script>
 </body>
 </html>
