--- a/posts.html
+++ b/posts.html
@@ -4,13 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Posts Page</title>
-    <link rel="stylesheet" href="./CSS/navigation.css"> <!-- Link to the CSS navigation -->
+    <link rel="stylesheet" href="./CSS/navigation.css">
 </head>
 <body>
-    <div id="nav-container"></div>
     <div id="content"></div>
     
-    <script src="./navigation.js" type="module"></script>
-    <script src="./posts.js"></script>
+    <script src="./posts.js" type="module"></script>
 </body>
 </html>
+
