--- a/user-posts.html
+++ b/user-posts.html
@@ -4,13 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>User Posts</title>
-    <link rel="stylesheet" href="./CSS/navigation.css"> <!-- Link to the CSS navigation -->
-</head>
+    <link rel="stylesheet" href="./CSS/navigation.css"> </head>
 <body>
-    <div id="nav-container"></div>
     <div id="content"></div>
     
-    <script src="./navigation.js" type="module"></script>
-    <script src="./user-posts.js"></script>
+    <script src="./user-posts.js" type="module"></script>
 </body>
 </html>
