--- a/search.html
+++ b/search.html
@@ -9,7 +9,7 @@
 <body>
     <div id="content"></div>
     
-    <script src="./serch.js" type="module"></script>
+    <script src="./search.js" type="module"></script>
 </body>
 </html>
 
